Trying to make homepage

--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Sustainable Reusable Gift Wrapping">
+    <meta name="keywords" content="Fullness Thereof, Upcycle, Sustainable, Gift, Present, Wrapping">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fullness Thereof</title>
+    <style>
+  	body {background-color: powderblue;}
+  	h1 {color: red;}
+  	p {color: blue;}
+</style>
   </head>
   <body>
-    <p>This is the very first version of the page</p>
+    <h1><font size="+4">The earth is the Lords and the <strong>Fullness Thereof</strong></font></h1>
+    
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Our team</a></li>
+        <li><a href="Shop Inventory.html">Shop Inventory</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+
+    <h2><font size="+3"><i>Gifting the future in the present</i></font></h2>
+    <h3>
+    	<p>We believe in</p>
+	<ul>
+            <li>the bible</li>
+	    <li>environmental stewardship</li>
+	    <li>intentional giving</li>
+	</ul>
+    <img src="images/FT1.png" alt="My test image" width="1557" height="500">
   </body>
 </html>
