--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Our team</a></li>
-        <li><a href="Shop Inventory.html">Shop Inventory</a></li>
+        <li><a href="Shop Inventory.php">Shop Inventory</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
 
