--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 	    <li>environmental stewardship</li>
 	    <li>intentional giving</li>
 	</ul>
-    <img src="pholex7/fullnessthereof/images/FT1.png" alt="My test image" width="1557" height="500">
+    <img src="/images/FT1.png" alt="My test image" width="1557" height="500">
   </body>
 </html>
