--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="#">Our team</a></li>
-        <li><a href="gallery.html">Shop Inventory</a></li>
+        <li><a href="inventory/gallery.html">Shop Inventory</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
 
