--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@
     <meta name="keywords" content="Fullness Thereof, Upcycle, Sustainable, Gift, Present, Wrapping">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fullness Thereof</title>
-    <style>
-  	body {background-color: powderblue;}
-  	h1 {color: red;}
-  	p {color: blue;}
-</style>
   </head>
   <body>
-    <h1><font size="+4">The earth is the Lords and the <strong>Fullness Thereof</strong></font></h1>
+    <h1>The earth is the Lords and the Fullness Thereof</h1>
     
     <nav>
       <ul>
@@ -23,7 +18,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
 
-    <h2><font size="+3"><i>Gifting the future in the present</i></font></h2>
+    <h2>Gifting the future in the present</h2>
     <h3>
     	<p>We believe in</p>
 	<ul>
