--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fullness Thereof</title>
   </head>
+<link rel="stylesheet" href="style.css">
   <body>
     <h1>The earth is the Lords and the Fullness Thereof</h1>
     
