--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="#">Our team</a></li>
         <li><a href="inventory/gallery.html">Shop Inventory</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
 
     <h2>Gifting the future in the present</h2>
