--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,7 @@
       <p>Some text..</p>
     </div>
   </div>
+  <div class="rightcolumn">
     <div class="card">
       <h3>Popular Post</h3>
       <div class="fakeimg">Image</div><br>
