--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="style.css">
   <body>
     <h1>The earth is the Lords and the Fullness Thereof</h1>
-    
+ <h2>   
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -19,7 +19,8 @@
         <li><a href="blog.html">Blog</a></li>
       </ul>
 
-    <h2>Gifting the future in the present</h2>
+    Gifting the future in the present
+  </h2>
     <h3>
     	<p>We believe in</p>
 	
