--- a/about.html
+++ b/about.html
@@ -1,1 +1,12 @@
-
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Sustainable Reusable Gift Wrapping">
+    <meta name="keywords" content="Fullness Thereof, Upcycle, Sustainable, Gift, Present, Wrapping">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fullness Thereof</title>
+  </head>
+<link rel="stylesheet" href="style.css">
+  <header> The Fulness Thereof </header>
+  <h1> About Us </h1>
+</html>
