--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Our team</a></li>
-        <li><a href="inventory/gallery.html">Shop Inventory</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="#">Shop Inventory</a></li>
         <li><a href="blog.html">Blog</a></li>
       </ul>
 
