--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
 <link rel="stylesheet" href="style.css">
   <body>
-    <h1>The earth is the Lords and the Fullness Thereof</h1>
- <h2>   
+    <header>The Fullness Thereof</header>
+ <h1>   
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -20,9 +20,8 @@
       </ul>
 
     Gifting the future in the present
-  </h2>
-    <h3>
-    	<p>We believe in</p>
+  </h1>
+   
 	
     <img src="images/FT1.jpg" alt="My test image" width="1557" height="500">
   </body>
